# cm-cpu-emulation

./: CMakeLists.txt  README.md  README_CONFIG.md  README_LOGGING.md
NOTICES/linux/: NOTICES.txt
cmake/: FindLevelZero.cmake  FindLibDw.cmake  FindLibFFI.cmake  FindOpenCLHeaders.cmake  changelog.cmake  common.cmake  common_headers.cmake  debug_symbols_access.cmake  package.cmake
common/: cm_index_types.h  cm_kernel_base.h  cm_priv_def.h  cm_rt.h  cm_rt_xe_hp_sdv.h  cm_utils.h  cm_version_defs.h  emu_api_export.h  emu_cfg.cpp  emu_cfg.h  emu_cfg_params.h  emu_cfg_platform.cpp  emu_cfg_platform.h  emu_dbgsymb.cpp  emu_dbgsymb.h  emu_dbgsymb_types.h  emu_kernel_arg.h  emu_kernel_support.cpp  emu_kernel_support.h  emu_kernel_support_types.cpp  emu_kernel_support_types.h  emu_log.cpp  emu_log.h  emu_log_flags.h  emu_platform.h  emu_utils.cpp  emu_utils.h  kernel_utils.cpp  kernel_utils.h  os_utils.cpp  os_utils.h  shim_os_defines.h  shim_support.h  type_26zi_dispatch_pattern.h  type_buffer_base.h  type_buffer_state_param.h  type_buffer_stateless_base.h  type_buffer_svm_base.h  type_buffer_up_base.h  type_cond_end_operator_code.h  (+50 more)
common/linux/: cm_include.h  cm_rt_api_os.h  cm_rt_def_os.h  emu_dbgsymb_os.cpp  emu_dbgsymb_os.h
common/windows/: cm_include.h  cm_rt_api_os.h  cm_rt_def_os.h  emu_dbgsymb_os.cpp  emu_dbgsymb_os.h
libcm/: CMakeLists.txt  cm.h  cm_color.h  cm_common_macros.h  cm_has_instr.h  cm_internal.cpp  cm_internal.h  cm_internal_emu.h  cm_intrin.cpp  cm_intrin.h  cm_list.h  cm_lsc.h  cm_mask.h  cm_printf_base.h  cm_printf_device.h  cm_slm_user.h  cm_traits.h  cm_vm.h  dataport_common.h  esimdcpu.cpp  esimdcpu_dataport.h  esimdcpu_runtime.cpp  esimdcpu_runtime.h  esimdcpu_support.cpp  esimdcpu_support.h  esimdemu_support.cpp  esimdemu_support.h  genx_dataport.cpp  genx_dataport.h  genx_dataport_emu.cpp  genx_simdcontrolflow.h  genx_simdcontrolflow_emu.h  genx_threading.cpp  genx_threading.h  half_type.h  libcm_common.h  libcm_def.h  rt.cpp  rt.h
libcm/alt_mmintrin/: emmintrin.h  mmintrin.h  xmmintrin.h
libcm/cmtl/: cmtl.h
libcm/private/: cm_lib.h  cm_stub.h  genx_lib.h
libcmrt/: CMakeLists.txt  cm_array.cpp  cm_array.h  cm_buffer_base.h  cm_buffer_emumode.cpp  cm_buffer_emumode.h  cm_debug.h  cm_def.h  cm_device_def.h  cm_device_emumode.cpp  cm_device_emumode.h  cm_device_export_emumode.cpp  cm_env_depend.h  cm_event_base.h  cm_event_emumode.cpp  cm_event_emumode.h  cm_group_space_emumode.cpp  cm_group_space_emumode.h  cm_kernel_emumode.cpp  cm_kernel_emumode.h  cm_l3_cache_config.h  cm_mem.h  cm_mem_fast_copy.h  cm_memory_object_control.cpp  cm_memory_object_control.h  cm_program_base.h  cm_program_emumode.cpp  cm_program_emumode.h  cm_queue_base.h  cm_queue_emumode.cpp  cm_queue_emumode.h  cm_rt_helpers.cpp  cm_statistics.cpp  cm_statistics.h  cm_surface_2d_base.h  cm_surface_2d_emumode.cpp  cm_surface_2d_emumode.h  cm_surface_2d_stateless_base.h  cm_surface_2d_up_base.h  cm_surface_3d_base.h  (+14 more)
libcmrt/linux/: cm_common.h  cm_def_os.h  cm_device_base.h
libcmrt/windows/: cm_common.h  cm_def_os.h  cm_device_base.h
license/: NOTICES.txt
license/linux/: LICENSE.md
license/windows/binary/: C_for_Metal_Binary_Intel_Redist_License_Agreement_04.06.22_Final.md
shim-layer/: CMakeLists.txt  cm_libraries.cmake  utils.cmake
shim-layer/shim/: CMakeLists.txt  intrusive_pointer.h  kernel_utils.cpp  kernel_utils.h  memory_manager.cpp  memory_manager.h  os_defines.h  os_utils.cpp  os_utils.h  shim.cpp  shim.h  shim_support.h  utils.h
shim-layer/shim/l0/: CMakeLists.txt  l0_mapping.cpp  shim.def
shim-layer/shim/ocl/: CMakeLists.txt  context.cpp  context.h  device.cpp  device.h  event.cpp  event.h  extensions.cpp  kernel.cpp  kernel.h  memory.cpp  memory.h  ocl.h  ocl_mapping.cpp  platform.cpp  platform.h  program.cpp  program.h  queue.cpp  queue.h  runtime.cpp  runtime.h  shim.def
shim-layer/shim/ze/: CMakeLists.txt  build_log.h  cmdlist.cpp  cmdlist.h  context.cpp  context.h  ddi.cpp  device.cpp  device.h  driver.cpp  driver.h  event.cpp  event.h  fence.cpp  fence.h  image.cpp  image.h  kernel.h  memory.cpp  memory.h  module.cpp  module.h  queue.cpp  queue.h  sampler.cpp  sampler.h  ze.h  ze_shim.def
shim-layer/tests/: CMakeLists.txt  functions.cmake
shim-layer/tests/vadd_hello_ocl/: vadd_genx.cpp  vadd_hello_offline.cpp
utils/: generate_changelog.sh
